files/base/vaultwarden/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
    auto-update-hour: '00'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: docker.io/vaultwarden/server:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "all" ]
          ports:
            - name: vw-web
              containerPort: 80
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
      volumes:
        - name: vaultwarden-data
          hostPath:
            type: DirectoryOrCreate
            path: /srv/vaultwarden/data

---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      name: vw-web
      port: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: rate200in1m@file
  labels:
    app: vaultwarden
spec:
  rules:
    - host: vaultwarden.192.168.122.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vaultwarden-admin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: private-ip-ranges@file
  labels:
    app: vaultwarden
spec:
  rules:
    - host: vaultwarden.192.168.122.11.nip.io
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
